cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -81,15 +81,27 @@
             <button class="product-button">Comprar</button>
           </div>
           <div class="card">
-            <img src="./assets/imgs/vaso.avif" alt="" />
+            <img src="./assets/imgs/mug5.avif" alt="" />
             <h3 class="product-name">Producto 5</h3>
             <p class="product-description">$2.400</p>
             <button class="product-button">Comprar</button>
           </div>
           <div class="card">
-            <img src="./assets/imgs/vaso2.avif" alt="" />
+            <img src="./assets/imgs/mug6.avif" alt="" />
             <h3 class="product-name">Producto 6</h3>
-            <p class="product-description">$1.400</p>
+            <p class="product-description">$11.700</p>
+            <button class="product-button">Comprar</button>
+          </div>
+          <div class="card">
+            <img src="./assets/imgs/mug7.avif" alt="" />
+            <h3 class="product-name">Producto 6</h3>
+            <p class="product-description">$15.460</p>
+            <button class="product-button">Comprar</button>
+          </div>
+          <div class="card">
+            <img src="./assets/imgs/mug8.avif" alt="" />
+            <h3 class="product-name">Producto 6</h3>
+            <p class="product-description">$21.400</p>
             <button class="product-button">Comprar</button>
           </div>
         </div>
