--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="grid-container">
-      <div class="header">
+      <div class="navbar">
         <a href="#">
           <i class="fa-solid fa-mug-hot"></i>
         </a>
