minor changes: FIX: code purge;  STYLE: mobile size adjustment

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="grid-container">
-      <div class="navbar">
+      <nav class="navbar">
         <a href="#">
           <i class="fa-solid fa-mug-hot"></i>
         </a>
@@ -29,9 +29,9 @@
         <a href="#">
           <h1>tacitas&copy</h1>
         </a>
-      </div>
+      </nav>
 
-      <div class="aside">
+      <aside class="aside">
         <ul class="categories">
           <li>
             <a href="#"> Tazas <span class="amount">(20)</span> </a>
@@ -52,9 +52,9 @@
             <a href="#"> Alcuzas <span class="amount">(20)</span> </a>
           </li>
         </ul>
-      </div>
+      </aside>
 
-      <div class="main">
+      <main class="main">
         <div class="gallery">
           <div class="card">
             <img src="./assets/imgs/mug1.avif" alt="" />
@@ -105,11 +105,11 @@
             <button class="product-button">Comprar</button>
           </div>
         </div>
-      </div>
+      </main>
 
-      <div class="footer">
+      <footer class="footer">
         <a href="#"><p>@tacitas</p></a>
-      </div>
+      </footer>
     </div>
 
     <!--
